# resumate

./: .gitignore  CLAUDE.md  Makefile  PLAN_v2.md  docker-compose.yml  rough_plan.md
backend/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  Dockerfile  Makefile  README.md  alembic.ini  mypy.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 6323d988a33a_initial_schema.py  a1b2c3d4e5f6_add_forked_from_id_to_sessions.py  b2c3d4e5f6a7_add_company_research_to_job_descriptions.py
backend/config/: llm.yaml
backend/src/: main.py
backend/src/api/: analytics.py  auth.py  career.py  chat.py  health.py  jobs.py  resumes.py  sessions.py  websocket.py
backend/src/core/: config.py  database.py  dependencies.py
backend/src/models/: __init__.py  base.py  career.py  cover_letter.py  feedback.py  job.py  resume.py  session.py  user.py
backend/src/schemas/: auth.py  career.py  job.py  matching.py  resume.py  user.py  ws_events.py
backend/src/services/: analytics.py  ats_scoring.py  auth.py  career.py  company_research.py  jd_scraper.py  job.py  latex_sanitizer.py  llm_config.py  match_scoring.py  pdf_generator.py  resume_extractor.py  resume_parser.py  resume_session.py  retrieval.py  session_learning.py  stream_manager.py
backend/templates/latex/: professional.tex.j2
backend/tests/: conftest.py
backend/tests/unit/: test_analytics.py  test_ats_scoring.py  test_auth.py  test_career_api.py  test_chat_agent.py  test_company_research.py  test_cover_letter.py  test_fact_checker.py  test_jd_scraper.py  (+13 more)
(+91 files in other folders)
