[tool.poetry]
name = "resumate"
version = "0.1.0"
description = "AI-powered resume tailoring tool"
authors = []
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "*"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0"}
alembic = "^1.14"
asyncpg = "^0.30"
pydantic = "^2.10"
pydantic-settings = "^2.7"
python-jose = {extras = ["cryptography"], version = "*"}
passlib = {extras = ["bcrypt"], version = "*"}
python-multipart = "*"
langchain-core = "^0.3"
langchain-openai = "^0.3"
langchain-anthropic = "^0.3"
langgraph = "^0.3"
pgvector = "^0.3"
pymupdf = "^1.25"
python-docx = "^1.1"
jinja2 = "^3.1"
httpx = "^0.28"
pyyaml = "^6.0"
email-validator = "^2.1"
beautifulsoup4 = "^4.14.3"
lxml = "^6.0.2"
duckduckgo-search = ">=7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.25"
pytest-cov = "^6.0"
ruff = "^0.9"
mypy = "^1.14"
pre-commit = "^4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
filterwarnings = [
    "ignore::sqlalchemy.exc.SAWarning:_pytest",
]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
